# sato

./: .env.example  .gitignore  README.md  README2.md  dev.sh  facetodo.txt  package-lock.json  todo.md
.github/workflows/: ci.yml
backend/: app.py  blend_service.py  debug_tools.py  e2e_support.py  mood_history.py  mood_service.py  requirements.txt  room_store.py  spotify_client.py
backend/tests/: test_api.py  test_spotify_client.py
helper/: diagram.py
sato-app/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
sato-app/e2e/: fixtures.js  room-flow.spec.js
sato-app/src/: App.test.js  App.vue  style.css
sato-app/src/components/: BlendView.test.js  BlendView.vue  MoodDetector.vue
sato-app/src/lib/: api.js  api.test.js  blend.js  blend.test.js  debug.js  mood-classifier.js  mood-detection.js
sato-pulse/: .gitignore  README.md  go.mod  go.sum  integration_test.go
sato-pulse/.github/workflows/: release.yml
sato-pulse/docs/: ARCHITECTURE.md  CLAUDE.md  STYLE.md  todo.txt
sato-pulse/mood-engine/: pyproject.toml
sato-pulse/mood-engine/mood_engine/: __init__.py  capture.py  classifier.py  exceptions.py  music_client.py  smoother.py
sato-pulse/mood-engine/tests/: test_backends.py  test_emotion_pipeline.py  test_ytmusic.py
scripts/: dev.sh  verify.sh
shared/: mood_profiles.json  spotify_client.py
vibecheck/: .gitignore  README.md  go.mod  integration_test.go
vibecheck/docs/: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  IPC_PROTOCOL.md  todo.txt
vibecheck/mood-engine/: pyproject.toml
(+62 files in other folders)
